<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlueLight"
    android:paddingBottom="90dp">

    <TextView
        android:id="@+id/tv_chat_ia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_ia"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"/>

    <ListView
        android:id="@+id/list_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:divider="@color/colorBlueLight"
        android:dividerHeight="8dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/et_mensaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/escribe_mensaje"
            android:background="@color/colorBlueLight"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_chat"
            android:drawablePadding="8dp"/>
    </LinearLayout>
</LinearLayout>
